# data_analysis_24

./: README.md  pyproject.toml
HR/: HR_데이터분석.ipynb  README.md  data_analysis.ipynb
lol24/: constants.py  data_analysis_240204.ipynb  data_scraper.ipynb  data_scraper.py  preprocessing.ipynb  preprocessing2.ipynb  utils.py
강의데이터/: README.md  강의데이터_분석.ipynb
도로이상탐지/: README.md  autoencoder.ipynb  lbp_glcm.ipynb
마케팅/: README.md  class2_과제.ipynb  recommendation.ipynb  마케팅_데이터분석.ipynb
반도체/: README.md  반도체_데이터분석.ipynb
제조/: 제조_데이터분석.ipynb  제조_데이터분석_모델링시도.ipynb
최종/: README.md  da.ipynb  dashboard.py  dashbord.ipynb
