[tool.poetry]
name = "data-analysis"
version = "0.1.0"
description = ""
authors = ["raphaelseo22 <seodh02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
scikit-learn = "^1.4.0"
catboost = "^1.2.2"
xgboost = "^2.0.3"
lightgbm = "^4.2.0"
notebook = "^7.0.7"
mypy = "^1.8.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

